# docs/swagger.json
@@ -9,6 +9,66 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/friends": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Envia uma solicitação de amizade ao id selecionado",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "friends"
+                ],
+                "summary": "Envia solicitação de amizade",
+                "parameters": [
+                    {
+                        "description": "Dados da solicitação",
+                        "name": "invitation",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.AddFriendInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "request sent successfully",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/invitations": {
             "post": {
                 "security": [
@@ -669,6 +729,17 @@
         }
     },
     "definitions": {
+        "dtos.AddFriendInput": {
+            "type": "object",
+            "required": [
+                "friend_id"
+            ],
+            "properties": {
+                "friend_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "dtos.InvitationInput": {
             "type": "object",
             "required": [
