# src/dtos/friends.go
@@ -1,0 +1,5 @@
+package dtos
+
+type AddFriendInput struct {
+	FriendID int `json:"friend_id" binding:"required"`
+}
